🎉auto update by Gmeek action

--- a/backup/常用软件.md
+++ b/backup/常用软件.md
@@ -5,9 +5,11 @@
 - 播放器：[Potplayer](https://daumpotplayer.com/download/)
 - 录屏：[EV录屏](https://www.ieway.cn/evcapture.html)
 - 文档处理：[WPS](https://www.wps.cn/)
+- 知识库：[语雀](https://www.yuque.com/dashboard)
 - 思维导图：[XMind](https://www.xmind.cn/)
 - 邮箱：[foxmail](https://www.foxmail.com/)
 - 压缩工具：[7z](https://www.7-zip.org/)
+- 梯子工具：[clash verge](https://clashverge.net/tutorial/)
 - 网盘
     - [百度网盘](https://pan.baidu.com/)
     - [阿里云盘](https://www.aliyundrive.com/)
@@ -17,6 +19,7 @@
     - [ToDesk](https://www.todesk.com/)
     - [向日葵](https://sunlogin.oray.com/product/feat)
     - [中国移动畅联](https://fcns.komect.com/)
+- 远程会议：[腾讯会议](https://meeting.tencent.com/) 
 - 杀毒软件：[火绒](https://huorong.cn/)
 - 输入法
     - [微信键盘](https://z.weixin.qq.com/)
@@ -40,15 +43,15 @@
 - 聊天：微信、企业微信、钉钉、QQ、小天才
 - 邮箱：QQ邮箱
 - 音乐：QQ音乐、小宇宙
-- 导航：高德地图
+- 出行导航：高德地图、航旅纵横、交管12123、圆周旅迹、滴滴出行
 - 日程待办：ToDo清单（148永久）
 - 浏览器：微软Edge
 - 效率：百度网盘、阿里云盘、坚果云、布丁扫描、形色、通义千问、文心一言等
 - 财务：支付宝、云闪付、网商银行等各银行app、个人所得税
 - 购物：淘宝、京东、拼多多、咸鱼、唯品会、美团、小红书、携程
-- 视频：哔哩哔哩
+- 视频：哔哩哔哩、必剪
 - 文档：语雀、WPS、备忘录
 - 输入法：微信键盘
+- 电子书：微信读书
 - 字典：欧路词典】多邻国
 - 照片：Lim Cam、SnapBridge、picsew
--    
