🎉auto update by Gmeek action

--- a/backup/常用软件.md
+++ b/backup/常用软件.md
@@ -53,7 +53,7 @@
 - 文档：语雀、WPS、备忘录
 - 输入法：微信键盘
 - 电子书：微信读书
-- 字典：欧路词典】多邻国
+- 字典：欧路词典、多邻国
 - 照片：Lim Cam、SnapBridge、picsew
 
 <!-- ##{"timestamp":1633687200}## -->
