🎉auto update by Gmeek action

--- a/backup/自建相册（照片管理方案）.md
+++ b/backup/自建相册（照片管理方案）.md
@@ -1,5 +1,5 @@
 主要用来备份手机照片等，统一管理。
-使用开源 https://immich.app/来搭建。
+使用开源 `https://immich.app/ ` 来搭建。
 
 ## 准备条件：
 - 开启 Hyper-V
@@ -8,7 +8,7 @@
 1. 开启 Hyper-V（程序和功能 - 启用或关闭 windows 功能）
 2. 安装 [Docker](https://www.docker.com/)
 
-![](https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io/Images/PixPin_2024-09-03_17-31-56.png) 
+![PixPin_2024-09-03_17-31-56](https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io/Images/PixPin_2024-09-03_17-31-56.png) 
 
 
 安装过程可能需要重启电脑。
@@ -31,10 +31,10 @@
 输入：`docker compose up -d` 
 第一次事件较长，需要下载文件。
 
-![](https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io/Images/PixPin_2024-09-03_17-31-58.png) 
+![PixPin_2024-09-03_17-31-58](https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io/Images/PixPin_2024-09-03_17-31-58.png) 
 
 ### Step4：开始玩耍
 浏览器打开：`http://127.0.0.1:2283/` 
 注意：第一个注册的用户为管理员。
 
-![](https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io/Images/PixPin_2024-09-03_17-32-25.png) 
+![PixPin_2024-09-03_17-32-25](https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io/Images/PixPin_2024-09-03_17-32-25.png) 
