🎉auto update by Gmeek action

--- a/backup/自建相册（照片管理方案）.md
+++ b/backup/自建相册（照片管理方案）.md
@@ -7,6 +7,8 @@
 
 1. 开启 Hyper-V（程序和功能 - 启用或关闭 windows 功能）
 2. 安装 [Docker](https://www.docker.com/) 
+
+![wenkai-1.png](https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io/images/wenkai-1.png)
 ![wenkai-1.png](https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io/images/wenkai-1.png) 
 ![PixPin_2024-09-03_17-31-56](https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io/Images/PixPin_2024-09-03_17-31-56.png) 
 
