🎉auto update by Gmeek action

--- a/backup/自建相册（照片管理方案）.md
+++ b/backup/自建相册（照片管理方案）.md
@@ -32,3 +32,12 @@
 ### Step4：开始玩耍
 浏览器打开：`http://127.0.0.1:2283/` 
 注意：第一个注册的用户为管理员。
+
+### 可能问题
+
+运行脚本报错
+`Set-ExecutionPolicy RemoteSigned -Scope Process` 
+`Set-ExecutionPolicy RemoteSigned -Scope CurrentUser` 
+` Set-ExecutionPolicy RemoteSigned -Scope LocalMachine` 
+
+`set-executionpolicy remotesigne` 
