🎉auto update by Gmeek action

--- a/backup/输入法导入联系人词库.md
+++ b/backup/输入法导入联系人词库.md
@@ -1,9 +1,19 @@
+## 准备工作 
+
 1. 企业微信总群，复制群成员账号。
-2. 粘贴到记事本，将;分号替换成回车。
+2. 粘贴到记事本，将;分号替换成回车(\r\n)。
 3. 部分账号后面带（）的，额外替换成空字符。
 4. 使用深蓝词库转换： https://github.com/studyzy/imewlconverter
 5. 选择第 2 步的文件，选择“无拼音纯汉字”，选择微软拼音自学习词库，转换即可。
-6. 微软拼音输入法，导入自学习词库，导入第五步生成的文件即可。
+
+## 导入微软输入法
+
+微软拼音输入法，导入自学习词库，导入第五步生成的文件即可。
+
+## 导入搜狗输入法
+
+1. 首先将第二步的文件编码格式转成ansi。
+2. 导入到搜狗输入法细胞词库即可。
 
 
 <!-- ##{"timestamp":1717672020}## -->
